--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
-        "vue-loader": "^16.2.0"                                     
+        "vue-loader": "^16.2.0"
     },
     "dependencies": {
         "@inertiajs/inertia": "^0.11.0",
         "@inertiajs/inertia-vue3": "^0.6.0",
+        "bootstrap": "^5.1.3",
         "vue": "^3.2.31"
     }
 }
